Fix for bug 128809 - Mail layout goes into infinite loop when "view headers all" is activated r=kin, sr=bryner, a=scc